# Studio-Whip

./: .gitignore  Cargo.toml  LICENSE  README.md
rust/: Cargo.toml  build.rs  compile_shaders.ps1  compile_shaders.sh
rust/documentation/: app_output_prompt.md  architecture.md  coding_tool_brainstorm.md  dev_plan.md  documentation_prompt.md  file_request_prompt.md  modules.md  modules_plan.md  roadmap.md  tasks.md  tasks_instruction_prompt.md  usage.md
rust/shaders/: background.frag  background.vert  cursor.frag  debug.frag  debug.vert  shape.frag  shape.vert  square.frag  test_shader.vert  text.frag  text.vert  triangle.frag  triangle.vert
rust/src/: lib.rs  main.rs  platform.rs  render_engine.rs  renderer.rs  scene.rs  vulkan_context.rs  vulkan_core.rs  vulkan_setup.rs  window_handler.rs  window_management.rs
rust/src/gui_framework/: event_bus.rs  mod.rs
rust/src/gui_framework/components/: interaction.rs  mod.rs  shape_data.rs  text_data.rs  text_layout.rs  visibility.rs
rust/src/gui_framework/context/: mod.rs  vulkan_context.rs  vulkan_setup.rs
rust/src/gui_framework/events/: interaction_events.rs  mod.rs
rust/src/gui_framework/interaction/: controller.rs  hotkeys.rs  mod.rs  text_drag.rs  text_editing.rs  utils.rs
rust/src/gui_framework/plugins/: bindings.rs  core.rs  interaction.rs  mod.rs  movement.rs
rust/src/gui_framework/rendering/: buffer_manager.rs  command_buffers.rs  font_server.rs  glyph_atlas.rs  mod.rs  pipeline_manager.rs  render_engine.rs  renderable.rs  resize_handler.rs  shader_utils.rs  swapchain.rs  text_renderer.rs
rust/src/gui_framework/scene/: group.rs  mod.rs  scene.rs
rust/src/gui_framework/window/: window_handler.rs
rust/user/: hotkeys.toml
rust/utilities/: llm_prompt_tool.sh
utilities/: Cargo.toml  README.md  architecture_config.toml  detailed_config.toml  prompt_tool.sh  sample_output.md
utilities/prompts/: file_request.md  generate_documentation.md  log_instructions.md  task_instructions.md
utilities/src/: config.rs  main.rs
utilities/src/parser/: ast_analyzer.rs  code_extractor.rs  mod.rs  types.rs
whip_ui/: Cargo.toml  build.rs
whip_ui/shaders/: debug.frag  debug.vert  shape.frag  shape.vert  text.frag  text.vert
whip_ui/src/: lib.rs  whip_ui_plugin.rs
whip_ui/src/assets/: definitions.rs  loaders.rs  mod.rs  plugin.rs  registry.rs  systems.rs
whip_ui/src/assets/tests/: definitions_tests.rs  loader_tests.rs  mod.rs  registry_tests.rs
whip_ui/src/cli/: command.rs  mod.rs  plugin.rs  renderer.rs
whip_ui/src/gui_framework/: diagnostics.rs  mod.rs
whip_ui/src/gui_framework/components/: interaction.rs  interaction_state.rs  mod.rs  shape_data.rs  text_data.rs  text_layout.rs  visibility.rs
whip_ui/src/gui_framework/context/: mod.rs  vulkan_context.rs  vulkan_setup.rs
whip_ui/src/gui_framework/debug/: mod.rs  ring_buffer.rs
whip_ui/src/gui_framework/events/: action_events.rs  interaction_events.rs  mod.rs
whip_ui/src/gui_framework/interaction/: hotkeys.rs  mod.rs  text_drag.rs  text_editing.rs  utils.rs
whip_ui/src/gui_framework/plugins/: bindings.rs  core.rs  interaction.rs  mod.rs  movement.rs
whip_ui/src/gui_framework/rendering/: buffer_manager.rs  command_buffers.rs  font_server.rs  glyph_atlas.rs  mod.rs  pipeline_manager.rs  render_engine.rs  resize_handler.rs  shader_utils.rs  swapchain.rs  text_renderer.rs
whip_ui/src/gui_framework/systems/: action_system.rs  mod.rs  state_tracking.rs  style_resolver.rs
whip_ui/src/layout/: coordinate_system.rs  mod.rs  plugin.rs  position_control.rs
whip_ui/src/logging/: filter.rs  mod.rs  store.rs  tracing_layer.rs  types.rs
whip_ui/src/logging/cli/: command.rs  mod.rs  plugin.rs  renderer.rs  session.rs
whip_ui/src/widgets/: blueprint.rs  components.rs  mod.rs  systems.rs  templates.rs
whip_ui_example/: Cargo.toml  build.rs
whip_ui_example/assets/ui/: example_ui.toml
whip_ui_example/assets/ui/layouts/: main.json  main.toml  test_simple_button.json  test_simple_button.toml
whip_ui_example/assets/ui/schema/: ui-definition.schema.json
whip_ui_example/assets/ui/widgets/: draggable_shape.toml  editable_label.toml
whip_ui_example/src/: logging_test.rs  main.rs
