[workspace]
members = [
    "whip_ui",
    "whip_ui_example",
]
resolver = "2"

[workspace.dependencies]
# Vulkan
ash = "0.38"
vk-mem = "0.4"
raw-window-handle = "0.6"
winit = "0.30.9"
ash-window = "0.13"

# Bevy ECS and Core
bevy_transform = "0.15"
bevy_app = "0.15"
bevy_core = "0.15"
bevy_math = "0.15"
bevy_ecs = "0.15"
bevy_log = "0.15"
bevy_utils = "0.15"
bevy_window = "0.15"
bevy_winit = "0.15"
bevy_reflect = "0.15"
bevy_input = "0.15"
bevy_a11y = "0.15"
bevy_diagnostic = "0.15"
bevy_time = "0.15"
bevy_color = "0.15"
bevy_hierarchy = "0.15"
bevy_asset = "0.15"

# Text Handling
cosmic-text = "0.14"
fontdb = "0.23"
swash = "0.2"
rectangle-pack = "0.4"
yrs = "0.23"

# Layout Engine
taffy = "0.5"

# Utilities
toml = "0.8"
thiserror = "2.0"
similar = "2.7.0"
serde = { version = "1.0", features = ["derive"] }

# Build Dependencies
walkdir = "2"