[package]
name = "rusty_whip"
version = "0.1.0"
edition = "2021"
build = "build.rs" 

[lib]
name = "rusty_whip"

[dependencies]
#Vulkan
ash = "0.38"
vk-mem = "0.4"
raw-window-handle = "0.6"
winit = "0.30.9" #Being replaced by bevy_winit
ash-window = "0.13"

#Bevy stuff
bevy_transform = "0.15"
bevy_app = "0.15"
bevy_core = "0.15"
bevy_math = "0.15"
bevy_ecs = "0.15"
bevy_log = "0.15"
bevy_utils = "0.15"
bevy_window = "0.15"
bevy_winit = "0.15"
bevy_reflect = "0.15"
bevy_input = "0.15"
bevy_a11y = "0.15"
bevy_diagnostic = "0.15"
bevy_time = "0.15"
bevy_color = "0.15"

#Text Handling
cosmic-text = "0.14" # For text layout and shaping
fontdb = "0.23"      # Database for loading system fonts (used by cosmic-text)
swash = "0.2"       # For glyph rasterization
rectangle-pack = "0.4" # For packing glyphs into an atlas texture
yrs = "0.23" #CRDT 

#Assorted variety fun pack
toml = "0.8"
thiserror = "2.0"

[build-dependencies]
walkdir = "2"