[package]
name = "whip_ui"
version = "0.1.0"
edition = "2021"
description = "A flexible, data-driven UI framework built on Bevy ECS and Vulkan"
license = "MIT OR Apache-2.0"
keywords = ["ui", "gui", "bevy", "vulkan", "gamedev"]
categories = ["gui", "graphics", "game-development"]

[lib]
name = "whip_ui"

[dependencies]
# Vulkan
ash = { workspace = true }
vk-mem = { workspace = true }
raw-window-handle = { workspace = true }
winit = { workspace = true }
ash-window = { workspace = true }

# Bevy ECS and Core
bevy_transform = { workspace = true }
bevy_app = { workspace = true }
bevy_core = { workspace = true }
bevy_math = { workspace = true }
bevy_ecs = { workspace = true }
bevy_log = { workspace = true }
bevy_utils = { workspace = true }
bevy_window = { workspace = true }
bevy_winit = { workspace = true }
bevy_reflect = { workspace = true }
bevy_input = { workspace = true }
bevy_a11y = { workspace = true }
bevy_diagnostic = { workspace = true }
bevy_time = { workspace = true }
bevy_color = { workspace = true }
bevy_hierarchy = { workspace = true }
bevy_asset = { workspace = true }

# Text Handling
cosmic-text = { workspace = true }
fontdb = { workspace = true }
swash = { workspace = true }
rectangle-pack = { workspace = true }
yrs = { workspace = true }

# Layout Engine
taffy = { workspace = true }

# Utilities
toml = { workspace = true }
thiserror = { workspace = true }
similar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Logging Service
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

# CLI
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
arboard = "3.4"

[features]
default = []
# Debug logging features for development builds
debug_logging = []
trace_logging = ["debug_logging"]
debug_viz = ["debug_logging"]

[build-dependencies]
walkdir = { workspace = true }