[package]
name = "whip_ui_example"
version = "0.1.0"
edition = "2021"
description = "Example application using the whip_ui framework"
build = "build.rs"

[[bin]]
name = "basic_example"
path = "src/main.rs"

[dependencies]
whip_ui = { path = "../whip_ui" }

# Only the minimal Bevy dependencies needed for the example
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_log = { workspace = true }
bevy_core = { workspace = true }
bevy_transform = { workspace = true }
bevy_color = { workspace = true }
bevy_math = { workspace = true }
bevy_utils = { workspace = true }
bevy_window = { workspace = true }
bevy_winit = { workspace = true }
bevy_input = { workspace = true }
bevy_a11y = { workspace = true }
bevy_time = { workspace = true }
bevy_hierarchy = { workspace = true }

# Text collaborative editing
yrs = { workspace = true }

[build-dependencies]
walkdir = { workspace = true }